<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
   <ImageView  android:id="@id/iv_item_0"  android:scaleType="fitXY"
               android:layout_width="match_parent"
               android:visibility="gone"
               android:background="@color/red"
               android:layout_height="120dip"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="@dimen/title_head_height"
                  android:orientation="horizontal"
                  android:background="@drawable/schedule_title_bg">
        <TextView android:text="@string/title_number" style="@style/schedule_title"  />
        <include layout="@layout/public_divider_view" />
        <TextView android:text="@string/title_name"   style="@style/schedule_title"  android:layout_weight="1.5"/>
        <include layout="@layout/public_divider_view" />
        <TextView android:text="@string/title_location"   style="@style/schedule_title"  />
        <include layout="@layout/public_divider_view" />
        <TextView android:text="@string/title_ronda"   style="@style/schedule_title"   android:layout_weight="1.5"/>
        <include layout="@layout/public_divider_view" />
        <TextView android:text="@string/title_cumulative_score"    style="@style/schedule_title"  android:layout_weight="1.5"/>
    </LinearLayout>
    <include  layout="@layout/public_listview"/>
</LinearLayout>