<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
              android:orientation="vertical"
              android:layout_height="match_parent">
    <!-- 球员排行-->
    <LinearLayout android:layout_width="match_parent" android:layout_height="@dimen/title_team_head_height"
                  android:background="@color/spinner_title_bg"
                  android:padding="20px"
                  android:orientation="horizontal">
        <com.vxfc.shenxin.view.SpinnerView android:id="@id/spinner_round"
                                           android:background="@drawable/round_spinner_bg"
                                           android:layout_width="0px"
                                           android:layout_weight="1"
                                           android:layout_marginRight="20px"
                                           android:layout_height="match_parent" />
        <com.vxfc.shenxin.view.SpinnerView android:id="@id/spinner_team"
                                           android:background="@drawable/round_spinner_bg"
                                           android:layout_width="0px"
                                           android:layout_weight="1"
                                           android:layout_marginRight="20px"
                                           android:layout_height="match_parent" />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent" android:layout_height="@dimen/title_team_head_height"
            android:orientation="horizontal"
            android:background="@drawable/title_vs">
        <TextView android:text="@string/title_rank" style="@style/team_title"/>
        <include  layout="@layout/public_divider_view"/>
        <TextView android:text="@string/title_player" style="@style/team_title" />
        <include  layout="@layout/public_divider_view"/>
        <TextView android:id="@id/tv_item_0" android:text="@string/title_shoot" style="@style/team_title"/>
        <include  android:id="@id/iv_item_0"  layout="@layout/public_divider_view"/>
        <TextView android:id="@id/tv_item_1" android:text="@string/title_header" style="@style/team_title" />
        <include android:id="@id/iv_item_1"   layout="@layout/public_divider_view" />
        <TextView android:id="@id/tv_item_2" android:text="@string/title_own_goal" style="@style/team_title" />
    </LinearLayout>
    <include layout="@layout/public_listview" />
</LinearLayout>