<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/loginActivityStyle"
   >
    <LinearLayout
        android:id="@id/rl_first"
        style="@style/loginBgStyle">

        <ImageView
            android:id="@id/iv_item_0"
            android:layout_width="45px"
            android:layout_height="@dimen/personal_height"
            android:src="@drawable/icon_tel" />

        <EditText
            android:id="@id/et_tel"
            style="@style/et_style"
            android:hint="@string/msg_tel"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="65px" />


    </LinearLayout>
    <TextView android:id="@id/tv_number"
        android:textSize="@dimen/font_size_10"
        android:layout_marginLeft="30px"
        android:layout_marginTop="30px"
        android:layout_marginRight="30px"
        android:layout_height="wrap_content" android:layout_width="wrap_content" />
    <GridLayout
        android:id="@+id/gl_next"
        android:columnCount="2"
        style="@style/loginBgStyle"
        android:visibility="gone"
        android:paddingBottom="60px"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_code"
            style="@style/et_style"
            android:hint="@string/msg_tel_code"
            android:layout_width="140dip"
            android:inputType="number"
            android:layout_column="0"
            android:maxLength="5" />

        <Button
            android:id="@id/btn_send"
            android:background="@null"
            android:layout_gravity="right"
            android:layout_height="@dimen/personal_height"
            android:layout_marginRight="30dip"
            android:text="@string/send"
            android:textColor="@color/grey"
            android:textSize="@dimen/font_size_13" />

        <View android:layout_height="1dp" android:layout_width="match_parent"
            android:background="@color/divider_et" android:layout_columnSpan="2"/>
        <EditText
            android:id="@id/et_name"
            style="@style/et_style"
            android:hint="@string/msg_nicename"
            android:inputType="textPersonName"
            android:layout_columnSpan="2"
            android:maxLength="16" />
        <View android:layout_height="1dp" android:layout_width="match_parent"
            android:background="@color/divider_et" android:layout_columnSpan="2"/>
        <EditText
            android:id="@id/et_pwd"
            style="@style/et_style"
            android:hint="@string/msg_pwd"
            android:inputType="textPassword"
            android:layout_columnSpan="2"
            android:maxLength="16" />
        <View android:layout_height="1dp" android:layout_width="match_parent"
            android:background="@color/divider_et" android:layout_columnSpan="2"/>
     </GridLayout>
</LinearLayout>